--- a/pages/opus4/styles.css
+++ b/pages/opus4/styles.css
@@ -98,5 +98,5 @@ a{
 
 .links{
     display: flex;
-    margin-top: 5vw;
+    margin-top: 4vw;
 }
