--- a/pages/opus6/styles.css
+++ b/pages/opus6/styles.css
@@ -98,5 +98,5 @@ a{
 
 .links{
     display: flex;
-    margin-top: 7.5vw;
+    margin-top: 6.5vw;
 }
